Fixed double music output of game.